# microagent

./: .dockerignore  .gitignore  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_PROMPTS.md  Dockerfile  LICENSE  README.md  TESTING_GUIDE.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/commands/: new-project.md  optimize-model.md  prepare-release.md  run-pipeline.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.vibe/skills/microagent/: SKILL.md
docs/: api-reference.md  architecture.md  faq.md  getting-started.md  index.md  llm-providers.md  mcp-integration.md  project-yaml-reference.md  user-guide.md
src/microagent/: cli.py  mcp_server.py
src/microagent/core/: cellpose_compat.py  evaluate.py  inspect.py  optimize.py  segment.py  train.py
src/microagent/data/: __init__.py  datasets.py
src/microagent/demo/: __init__.py  synthetic.py
src/microagent/fair/: container.py  provenance.py  tracking.py
src/microagent/project/: knowledge.py  schema.py
src/microagent/viz/: overlays.py  plots.py  report.py
src/microagent/viz/templates/: report.html.j2
tests/: conftest.py  test_cli.py  test_container.py  test_datasets.py  test_evaluate.py  test_fair.py  test_inspect.py  test_mcp_server.py  test_optimize.py  test_project.py  test_report.py  test_segment.py  test_train.py  test_viz.py
tests/integration/: conftest.py  test_full_pipeline.py
